--- a/.github/workflows/upgrade-node.yml
+++ b/.github/workflows/upgrade-node.yml
@@ -67,6 +67,8 @@ jobs:
           echo "major=$NEW_NODEJS_VERSION_MAJOR" >> $GITHUB_OUTPUT
           [[ "$NEW_NODEJS_VERSION_MAJOR" > "$CURRENT_NODEJS_VERSION_MAJOR" || ("$NEW_NODEJS_VERSION_MAJOR" == "$CURRENT_NODEJS_VERSION_MAJOR" && "$NEW_NODEJS_VERSION_MINOR" > "$CURRENT_NODEJS_VERSION_MINOR") ]] && IS_NEWER=1 || IS_NEWER=0
           echo "is_newer=$IS_NEWER" >> $GITHUB_OUTPUT
+      - name: Debugging
+        run: echo ${{ steps.latest_version.outputs.is_newer }}
   upgrade:
     name: Upgrade Node.js
     needs: version
