--- a/.github/workflows/upgrade-node.yml
+++ b/.github/workflows/upgrade-node.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Node.js version to upgrade to, in format: 12.34.56"
+        description: "Node.js version to upgrade to, in the format: 12.34.56"
         required: false
         type: string
 concurrency:
@@ -78,7 +78,7 @@ jobs:
     env:
       CI: "true"
       CHECKPOINT_DISABLE: "1"
-    if: ${{ needs.version.outputs.should_upgrade }}
+    if: ${{ always() && needs.version.outputs.should_upgrade }}
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
