--- a/.github/workflows/upgrade-node.yml
+++ b/.github/workflows/upgrade-node.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af
         with:
-          node-version: 18.12.0
+          node-version: ${{ needs.version.outputs.latest }}
       - name: Install
         run: yarn install
       - name: Run upgrade script
